--- a/src/_global.scss
+++ b/src/_global.scss
@@ -1,6 +1,7 @@
 @use './variables';
 
 body {
+  padding: 5.0625em 1.5em;
   background-color: var(--very-dark-blue);
   font-size: 100%;
   font-family: var(--font-family);
