--- a/src/_global.scss
+++ b/src/_global.scss
@@ -5,6 +5,7 @@ body {
   background-color: var(--very-dark-blue);
   font-size: 100%;
   font-family: var(--font-family);
+  line-height: 1;
   color: white;
 }
 
