--- a/src/_stats.scss
+++ b/src/_stats.scss
@@ -1,6 +1,11 @@
 .stats {
   margin-block-start: 1.5em;
-  padding: 1.5em;
+  padding: 1.75em 1.5em;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 0.375em;
+  align-items: center;
   background-color: var(--dark-blue);
   border-radius: 0.9375rem;
 
@@ -9,12 +14,17 @@
     font-weight: 500;
   }
 
+  &__dots {
+    justify-self: end;
+  }
+
   &__number {
     font-size: 2rem;
     font-weight: 300;
   }
 
   &__previous {
+    justify-self: end;
     font-size: 0.9375rem;
     color: var(--pale-blue);
   }
