--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,7 +9,7 @@
   --play-colour: hsl(195, 74%, 62%);
   --study-colour: hsl(348, 100%, 68%);
   --exercise-colour: hsl(145, 58%, 55%);
-  --social--colour: hsl(264, 64%, 52%);
+  --social-colour: hsl(264, 64%, 52%);
   --self-care-colour: hsl(43, 84%, 65%);
 
   // Typography
