Right aligned previous so it looks better when it goes over two lines

--- a/src/_stats.scss
+++ b/src/_stats.scss
@@ -41,6 +41,7 @@
     justify-self: end;
     font-size: 0.9375rem;
     color: var(--pale-blue);
+    text-align: right; // so it looks better when it goes over two lines
   }
 }
 
