--- a/src/_stats.scss
+++ b/src/_stats.scss
@@ -1,15 +1,28 @@
+@use './breakpoints';
+
 .stats {
   --stats-gap: 4em;
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+    'title dots'
+    'number previous';
   gap: 0.375em;
   align-items: center;
   margin-block-start: var(--stats-gap);
   padding: 1.75em 1.5em;
   background-color: var(--dark-blue);
   border-radius: 0.9375rem;
+
+  @include breakpoints.breakpoint-up(large) {
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      'title dots'
+      'number number'
+      'previous previous';
+  }
 
   &::before {
     position: absolute;
@@ -24,24 +37,32 @@
   }
 
   &__title {
+    grid-area: title;
     font-size: 1.125rem;
     font-weight: 500;
   }
 
   &__dots {
+    grid-area: dots;
     justify-self: end;
   }
 
   &__number {
+    grid-area: number;
     font-size: 2rem;
     font-weight: 300;
   }
 
   &__previous {
+    grid-area: previous;
     justify-self: end;
     font-size: 0.9375rem;
     color: var(--pale-blue);
     text-align: right; // so it looks better when it goes over two lines
+
+    @include breakpoints.breakpoint-up(large) {
+      justify-self: start;
+    }
   }
 }
 
