--- a/src/_global.scss
+++ b/src/_global.scss
@@ -1,4 +1,5 @@
 @use './variables';
+@use './breakpoints';
 
 body {
   padding: 5.0625em 1.5em;
@@ -12,4 +13,13 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+main {
+  @include breakpoints.breakpoint-up(large) {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 1.875em;
+    place-content: center;
+  }
 }
