--- a/src/_stats.scss
+++ b/src/_stats.scss
@@ -1,5 +1,14 @@
 @use './breakpoints';
 
+.stats-section {
+  @include breakpoints.breakpoint-up(large) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1.875em;
+  }
+}
+
 .stats {
   --stats-gap: 4em;
   position: relative;
@@ -17,13 +26,14 @@
   border-radius: 0.9375rem;
 
   @include breakpoints.breakpoint-up(large) {
-    grid-template-rows: 1fr 0.15fr 1fr 1fr;
+    grid-template-rows: auto 0.15fr 1fr auto;
     grid-template-areas:
       'title dots'
       '. . '
       'number number'
       'previous previous';
-    gap: 0.5em;
+    column-gap: 0.5em;
+    margin-block-start: 2em;
   }
 
   &::before {
