--- a/src/_heading.scss
+++ b/src/_heading.scss
@@ -7,7 +7,7 @@
     align-items: center;
     gap: 1em;
     padding: 1.65em;
-    border-radius: 0.9375rem;
+    border-radius: var(--border-radius);
     background-color: var(--blue);
     z-index: 2;
 
@@ -53,6 +53,7 @@
     padding-block-start: 3em;
     background-color: var(--dark-blue);
     font-size: 1.125em;
+    border-radius: var(--border-radius);
   }
 
   &__times {
