--- a/src/_heading.scss
+++ b/src/_heading.scss
@@ -14,6 +14,7 @@
     @include breakpoints.breakpoint-up(large) {
       display: block;
       max-width: 16em;
+      padding: 2.3em 2em 5em 2em;
     }
   }
 
@@ -43,7 +44,9 @@
     color: white;
 
     @include breakpoints.breakpoint-up(large) {
+      margin-block-start: 0.25em;
       font-size: 2.5rem;
+      line-height: 1;
     }
   }
 
@@ -54,6 +57,10 @@
     background-color: var(--dark-blue);
     font-size: 1.125em;
     border-radius: var(--border-radius);
+
+    @include breakpoints.breakpoint-up(large) {
+      padding-block-start: 2em;
+    }
   }
 
   &__times {
