Arranged the stats items for in between sizes

--- a/src/_breakpoints.scss
+++ b/src/_breakpoints.scss
@@ -1,6 +1,10 @@
 $breakpoints-up: (
-  // 992px
-  'large': '40em'
+  // 1070px
+  'medium': '37.5em',
+  // 990px
+  'medium-large': '58em',
+  // 1070px
+  'large': '66em'
 );
 
 @mixin breakpoint-up($size) {
