--- a/src/_stats.scss
+++ b/src/_stats.scss
@@ -1,8 +1,14 @@
 @use './breakpoints';
 
 .stats-section {
-  @include breakpoints.breakpoint-up(large) {
+  @include breakpoints.breakpoint-up(medium) {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1em;
+  }
+
+  @include breakpoints.breakpoint-up(medium-large) {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 2em;
