--- a/src/_heading.scss
+++ b/src/_heading.scss
@@ -38,15 +38,14 @@
   }
 
   &__name {
+    margin-block-start: 0.25em;
     font-size: 1.5rem;
     font-weight: 300;
-    line-height: 1.5;
+    line-height: 1;
     color: white;
 
-    @include breakpoints.breakpoint-up(large) {
-      margin-block-start: 0.25em;
+    @include breakpoints.breakpoint-up(medium) {
       font-size: 2.5rem;
-      line-height: 1;
     }
   }
 
